--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "author": "WA1OUI",
     "dependencies": {
-        "pebble-clay": "^1.0.2"
+        "pebble-clay": "^*",
+        "pebble-fctx": "^*"
     },
     "keywords": [],
     "name": "mainly-seconds",
@@ -12,8 +13,6 @@
         "displayName": "Mainly Seconds",
         "enableMultiJS": true,
         "messageKeys": [
-            "PERSONALIZED_TEXT_KEY",
-            "DATE_FORMAT_KEY",
             "BT_VIBRATE_KEY",
             "LOW_BATTERY_KEY",
             "BG_COLOR_KEY",
@@ -23,40 +22,10 @@
         "resources": {
             "media": [
                 {
-                    "file": "images/Personalize_Menu_Icon_Color.png",
+                    "file": "images/Mainly Seconds Menu Icon.png",
                     "name": "IMAGE_MENU_ICON",
                     "targetPlatforms": null,
                     "type": "bitmap"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_19",
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_22",
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_24",
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_26",
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_30",
-                    "type": "font"
-                },
-                {
-                    "file": "fonts/monaco.ttf",
-                    "name": "FONT_MONACO_37",
-                    "type": "font"
                 },
                 {
                     "file": "fonts/HelveNeuLig.ttf",
@@ -72,7 +41,7 @@
             "chalk",
             "diorite"
         ],
-        "uuid": "68ca6996-29f8-4ca8-951a-a4fb179bc26b",
+        "uuid": "ef34a00c-7671-4a18-a90e-852a959a2727",
         "watchapp": {
             "watchface": true
         }
